Fixed overflow issue on the hero component

--- a/src/components/HeroSection.scss
+++ b/src/components/HeroSection.scss
@@ -3,7 +3,7 @@
 
 #hero-section {
     height: 100vh;
-    width: 100vw;
+    // width: 100vw;
     color: $color-light;
 
     .left {
