--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,7 @@ a {
     position: absolute;
     top:0;
     left:0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 
     img {
